@@ -47,6 +47,10 @@
 * In the samples view the sample description column has been moved to the end.  This will give more space for long sample descriptions since flex automatically gives the last column the most space by default.  Also word wrap has been enabled for this column as well.
 * Editting the name and date on the flow cell edit window now saves the changes.
 * When a request is split in the billing window, a refresh would sometimes reposition on the wrong part of the split.  This has been fixed.
+* Allowed for editing of comments for analysis files in AnalysisEditView.
+* Added a checkbox for an analysis so all files can be selected at once.
+* File size does not display for files not on the user's file system on AnalysisDownloadView.
+* Fixed a problem with new folders not sorting on AnalysisUploadView.
 
 5.3.6 Deploy Notes
 --------------------
